# datadog-api-client-python

./: .apigentools-info  .buildinfo  .generated-info  .generated_files  .gitattributes  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANtGELOG.md  CLOUD_AUTH_FINAL_SUMMARY.md  CLOUD_AUTH_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.test  GO_PYTHON_IMPLEMENTATION_COMPARISON.md  Makefile  NOTICE  README.md  RELEASING.md  TESTING.md  check-examples.sh  datadog_api_client.html  datadog_api_client.v1.api.html  datadog_api_client.v1.html  datadog_api_client.v1.model.html  datadog_api_client.v2.api.html  datadog_api_client.v2.html  docker-compose.generator.yaml  extract-code-blocks.awk  extract-code-blocks.sh  generate.sh  genindex.html  index.html  mkdocs.yml  objects.inv  openapitools.json  py-modindex.html  pytest.ini  (+10 more)
.azure-pipelines/: all.yml
.generator/: conftest.py  openapitools.json  pyproject.toml
.generator/config/: v1.json  v2.json
.generator/schemas/v1/: openapi.yaml
.generator/schemas/v2/: openapi.yaml
.generator/src/generator/: cli.py  compat-files  formatter.py  generate.py  openapi.py  python_formatter.py  replacement.json
.generator/src/generator/templates/: api.j2  api_client.j2  api_info.j2  apis.j2  aws.j2  base_configuration.j2  compat.j2  configuration.j2  delegated_auth.j2  example.j2  example_aws.j2  exceptions.j2  init.j2  model.j2  model_enum.j2  model_generic.j2  model_oneof.j2  model_simple.j2  model_utils.j2  models.j2  package.j2  rest.j2
.generator/templates/: README_common.mustache  __init__package.mustache  api.mustache  api_client.mustache  api_doc.mustache  api_doc_example.mustache  configuration.mustache  exceptions.mustache  model.mustache  model_doc.mustache  model_utils.mustache  python_doc_auth_partial.mustache  rest.mustache
.generator/templates/model_templates/: classvars.mustache  docstring_allowed.mustache  docstring_openapi_validations.mustache  invalid_pos_args.mustache  method_from_openapi_data_composed.mustache  method_from_openapi_data_normal.mustache  method_from_openapi_data_shared.mustache  method_from_openapi_data_simple.mustache  method_init_composed.mustache  method_init_normal.mustache  method_init_shared.mustache  method_init_simple.mustache  method_set_attribute.mustache  methods_setattr_getattr_composed.mustache  methods_setattr_getattr_normal.mustache  methods_shared.mustache  methods_todict_tostr_eq_shared.mustache  methods_tostr_eq_simple.mustache  model_composed.mustache  model_normal.mustache  model_simple.mustache  validations.mustache
.generator/tests/: test_formatter.py  test_scenarios.py
.github/: release.yml
.github/chainguard/: self.github.pre-commit.pull-request.sts.yaml  self.github.release.master.sts.yaml
.github/workflows/: approved_status.yml  codeql-analysis.yml  doc-test.yml  docs.yml  mergeable_status.yml  prepare_release.yml  publish.yml  release.yml  reusable-ci.yml  reusable-examples.yml  reusable-integration-test.yml  reusable-pre-commit.yml  reusable-python-test.yml  stale.yml  static-analysis.yml  test.yml  test_integration.yml
.openapi-generator/: FILES
_sources/: datadog_api_client.rst.txt  datadog_api_client.v1.model.rst.txt  datadog_api_client.v1.rst.txt  datadog_api_client.v2.api.rst.txt  datadog_api_client.v2.model.rst.txt  index.rst.txt
datadog_api_client/v1/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  openapi.yaml
datadog_api_client/v2/: __init__.py  api_client.py  configuration.py  model_utils.py  openapi.yaml  rest.py
docs/: README.md  conf.py  datadog_api_client.rst  datadog_api_client.v1.api.rst  datadog_api_client.v1.model.rst  datadog_api_client.v1.rst  datadog_api_client.v2.api.rst  datadog_api_client.v2.model.rst  datadog_api_client.v2.rst  requirements.txt
docs/_templates/: layout.html  package.rst_t
docs/v1/: APIErrorResponse.md  AWSAccount.md  AWSAccountAndLambdaRequest.md  AWSAccountCreateResponse.md  AWSAccountDeleteRequest.md  AWSAccountListResponse.md  AWSIntegrationApi.md  AWSLogsAsyncError.md  AWSLogsAsyncResponse.md  AWSLogsAsyncResponseErrors.md  AWSLogsIntegrationApi.md  AWSLogsLambda.md  AWSLogsListResponse.md  AWSLogsListResponseLambdas.md  AWSLogsListServicesResponse.md  AWSLogsServicesRequest.md  AWSNamespace.md  AWSTagFilter.md  AWSTagFilterCreateRequest.md  AWSTagFilterDeleteRequest.md  AWSTagFilterListResponse.md  AWSTagFilterListResponseFilters.md  AccessRole.md  AgentCheck.md  AlertGraphWidgetDefinition.md  AlertGraphWidgetDefinitionType.md  AlertValueWidgetDefinition.md  AlertValueWidgetDefinitionType.md  ApiKey.md  ApiKeyListResponse.md  ApiKeyResponse.md  ApmResourcesQueryDefinition.md  ApmStatsQueryColumnType.md  ApmStatsQueryDefinition.md  ApmStatsQueryRowType.md  ApplicationKey.md  ApplicationKeyListResponse.md  ApplicationKeyResponse.md  AuthenticationApi.md  AuthenticationValidationResponse.md  (+736 more)
docs/v2/: APIErrorResponse.md  APIKeyCreateAttributes.md  APIKeyCreateData.md  APIKeyCreateRequest.md  APIKeyRelationships.md  APIKeyResponse.md  APIKeyResponseIncludedItem.md  APIKeyUpdateAttributes.md  APIKeyUpdateData.md  APIKeyUpdateRequest.md  APIKeysResponse.md  APIKeysSort.md  APIKeysType.md  ApplicationKeyCreateAttributes.md  ApplicationKeyCreateData.md  ApplicationKeyCreateRequest.md  ApplicationKeyRelationships.md  ApplicationKeyResponse.md  ApplicationKeyResponseIncludedItem.md  ApplicationKeyUpdateAttributes.md  ApplicationKeyUpdateData.md  ApplicationKeyUpdateRequest.md  ApplicationKeysSort.md  ApplicationKeysType.md  CloudSIEMApi.md  CloudWorkloadSecurityAgentRuleAttributes.md  CloudWorkloadSecurityAgentRuleCreateAttributes.md  ContentEncoding.md  (+384 more)
templates/: README_common.mustache  api_client.mustache  api_doc.mustache  configuration.mustache  python_doc_auth_partial.mustache
tests/: aws_test.py  client_test.py  conftest.py  delegated_auth_test.py  test_async.py  test_deserialization.py  test_errors.py  test_jsonapi.py  test_pat_auth.py  test_retry.py  test_serialization.py  test_thread.py  test_version.py
(+17444 files in other folders)
