# Unless explicitly stated otherwise all files in this repository are licensed
# under the 3-clause BSD style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2019 Datadog, Inc.

[metadata]
name = datadog-api-client
description = Collection of all Datadog Public endpoints
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    openapi
    api
    client
    openapi-generator
    datadog
author = Datadog, Inc.
author_email = packages@datadoghq.com
url = https://github.com/DataDog/datadog-api-client-python
license = BSD
platforms = any
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/DataDog/datadog-api-client-python/issues
    Documentation = https://docs.datadoghq.com/api/
    Source Code = https://github.com/DataDog/datadog-api-client-python

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    urllib3>=1.15
    certifi
    python-dateutil
    typing-extensions
setup_requires =
    setuptools>=30.3.0
    setuptools_scm

[options.extras_require]
apm =
    ddtrace>=1.15.0
async =
    aiosonic==0.15.1
zstandard =
    zstandard
tests =
    aiosonic==0.15.1
    glom
    jinja2
    pytest
    pytest-bdd==6.0.1
    pytest-asyncio
    pytest-randomly
    pytest-recording
    python-dateutil
    mypy
    types-python-dateutil
    zstandard

[options.packages.find]
exclude = tests
where=src

[options.package_data]
datadog_api_client = py.typed

[tool:pytest]
# addopts = --black --cov=datadog_api_client --cov-config .coveragerc --cov-report=term-missing

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:black]
line-length = 120

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120
